--- a/marketresearch.html
+++ b/marketresearch.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>How to Create a Simple Comment Box using HTML CSS & JS</title>
+        <title>market research</title>
         <style>
             body {
       background: beige;
@@ -57,17 +57,30 @@
     </head>
 <body style="background-image: 'https://wallpaperaccess.com/full/949174.jpg';">
    
-    <h1 style="color: red;">Market research</h1>
+    <h1 style="color: red;">Blog Update 1 - Market Research <br>posted by Talal Almutairi</h1>
     <h2 style="color: royalblue;">What Is Market Research?</h2>
     
-    <p style="overflow-wrap: normal;color:black;font-size: larger;">Market research is the practice of enthusiastically engaging potential consumers to establish the feasibility of a proposed good or service. Moreover, this type of research enables an enterprise to determine its target marketplace and acquire perspectives and other responses from clients about their desire for a good or service. Market research can be performed in-house, by the enterprise, or by a firm that concentrates on this type of research field. In addition, evaluations, product testing, and surveys can all be utilized to achieve this. Furthermore, this type of research is an important part of a new service or product's research and development (R&D). On top of that, this type of research aims to analyze the market for a particular good or service to establish how the target audience will react. Consequently, this can involve the collection of information for market segmentation and product differentiation, which can be utilized to design advertising promotions or decide which traits are most essential to buyers. Besides, market research is an essential tool for firms to comprehend what their clients desire, develop goods that they will employ, and keep a competitive edge over their rivals.</p>
-    <h2 style="color: royalblue;">How Market Research Gathers Information</h2>
-<p style="overflow-wrap: normal;color:black;font-size: larger;">Market research integrates primary information which is acquired by the firm, or an individual employed by the firm, and secondary information, which is collected by outside sources. On the one hand, the information that the firm has acquired directly or that has been gathered by an individual or corporation engaged to do the investigation is referred to as primary information. On the other hand, secondary information is information that has already been found by an outside source. This can involve demographic details from administration census data, research documents from trade organizations, or presented data from other organizations in a similar market region.</p>
+    <p style="overflow-wrap: normal;color:black;font-size: larger;">Market research is the practice of enthusiastically engaging potential consumers to establish the feasibility of a proposed good or service. Moreover, this type of research enables an enterprise to determine its target marketplace and acquire perspectives and other responses from clients about their desire for a good or service. Market research can be performed in-house, by the enterprise, or by a firm that concentrates on this type of research field. In addition, evaluations, product testing, and surveys can all be utilized to achieve this. Furthermore, this type of research is an important part of a new service or product's research and development (R&D). On top of that, this type of research aims to analyze the market for a particular good or service to establish how the target audience will react. Consequently, this can involve the collection of information for market segmentation and product differentiation, which can be utilized to design advertising promotions or decide which traits are most essential to buyers. Besides, market research is an essential tool for firms to comprehend what their clients desire, develop goods that they will employ, and keep a competitive edge over their rivals.
+    </p>
+
+    <h2 style="color: royalblue;">Marketing Research is Systematic and Objective </h2>
+<p style="overflow-wrap: normal;color:black;font-size: larger;">At all phases of the marketing research process, particularly during the data gathering phase, systematic strategy is essential. Each phase's methods are scientifically valid, fully recorded, and, to the extent possible, prepared ahead of time. The scientific process is used in marketing research, in which data is collected and examined to test preconceived concepts or assumptions. On top of that, marketing research ought to be undertaken unbiasedly in order to produce reliable details that reflect the genuine condition of circumstances. While the researcher's ideology will always impact the research, it should be independent of the researcher's or management's political or personal prejudices. This is particularly critical during the data gathering process. The information gathered will be examined and utilized to make business decisions. Consequently, the data gathering procedure must be as bias-free as feasible.
+</p>
+
+<h2 style="color: royalblue;">Primary Versus Secondary Research</h2>
+<p style="overflow-wrap: normal;color:black;font-size: larger;">In general, when it comes to data collection, a marketer has a variety of options. The Nielsen Ratings is a television audience assessment system that offers information on audience structure and composition in US broadcast markets. Gallup Polls undertake public opinion polls and disseminate the findings of data-driven reporting on a daily basis. The United States Census Bureau, which is overseen by the United States government, is the primary source of data about the US community and economy. To assist plan and establishing transportation networks, police and fire precincts, election districts, and schools, data on population, housing, and demographic traits is acquired.</p>
+<h2 style="color: royalblue;">How Market Research Gathers Information </h2>
+<p style="overflow-wrap: normal;color:black;font-size: larger;">Market research integrates primary information which is acquired by the firm, or an individual employed by the firm, and secondary information, which is collected by outside sources. On the one hand, the information that the firm has acquired directly or that has been gathered by an individual or corporation engaged to do the investigation is referred to as primary information. On the other hand, secondary information is information that has already been found by an outside source. This can involve demographic details from administration census data, research documents from trade organizations, or presented data from other organizations in a similar market region.
+</p>
+
+
     <h2 style="color: royalblue;">Example of Market Research</h2>
 <p style="overflow-wrap: normal;color:black;font-size: larger;">Several companies do market research to assess innovative products or to get feedback from clients on what products or services they require but do not have. Subsequently, a corporation considering beginning a business, for instance, might conduct market research to observe whether its product or service is feasible. If the market research supports client interest, the organization can confidently proceed with the business strategy. If not, the company should use the findings of the market research to develop product improvements that are more in line with customer desires.</p>
     <h2 style="color: royalblue;">The bottom line</h2>
     <p style="overflow-wrap: normal;color:black;font-size: larger;">Market research enables businesses to learn about their product's desire and feasibility, as well as how it might operate in the real world. Market research can be done using primary or secondary information, both of which provide distinct perspectives on a firm's offering. Finally, market research is an important part of a company's research and development (R&D) process, as well as a crucial factor in its success and development.</p>
-
+<p>Date Posted: November 14, 2021 <br>
+    Time Posted: 12:30 PM
+    </p>
 <br>
 
 <section id="wrapper">
